kubernetes/prd/tokyo/datahub-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: data-catalogue-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:165463520094:certificate/755d4867-55bb-48be-84cc-7004037bf093
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/security-groups: sg-0a6abbe05bab3dc17, sg-0076cb5e92a093750
    alb.ingress.kubernetes.io/tags: Env=development,Cost=smartnews,System=service-proxy,Component=service-proxy
spec:
  rules:
    - host: "data-catalog.smartnews.net"
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - backend:
              serviceName: datahub-frontend-react
              servicePort: 9002
    - host: "kibana.smartnews.net"
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - backend:
              serviceName: kibana
              servicePort: 5601
    - host: "datahub-rest.smartnews.net"
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - backend:
              serviceName: datahub-gms
              servicePort: 8080
